--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 requests
 pyrogram    
 TgCrypto
-psutil
 uvicorn
 fastapi
+asyncio
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+GPUtil
+httpx
+moviepy
+natsort
+opencv-python
+Pillow
+psutil
+pytz
+uvloop
+yt_dlp
