--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,8 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      with:
+        node-version: "20"
+        - name: Set up Python 3.10
+          uses: actions/setup-python@v3
       with:
         python-version: "3.10"
     - name: Install dependencies
