--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  svg-generation:
+  installing:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +23,11 @@ jobs:
           architecture: 'x64'
       - name: Install requirements
         run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          python3 -m pip install -r requirements.txt
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install -r requirements.txt
           pip install -e .
 
       - name: testing
         run: |
-          python3 --version
-          python3 test.py
+          python --version
+          python test.py
