--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,9 +9,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+          architecture: 'x64'
       - name: Install requirements
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade pip setuptoo
           python -m pip install -r requirements.txt
           pip install -e .
 
