--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - name: Set up Python 3.10
+        using: 'node20'
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
